  - Lots of language/internationalization updates
  - conf.pl fixes for certain uses of SM_PATH, esp. $signout_page
  - SMTP & IMAP auth method "plain" was a misnomer - now corrected to 
    the more accurate name "login" (Plain to be implemented soon)
  - Fix for compose after search bug.  (Closes #662346)
  - Improved error reporting when sending mail with SMTP.
  - Changed SquirrelMail identification to use User-Agent in stead of X-Mailer.
  - Prevent endless loop when timezone config is not found. Thanks Joshua Colson.
  - Fix IMAP error when returning to message from viewing image attachment.
  - Do more trimming to indented subjects in threadview so they don't wrap.

	
Version 1.4.0 RC 1
------------------
  - Change the way highlighting rules are stored to make them more reliable and
    easier to manage.
  - Reorganization of conf.pl, menu #2
  - Added CRAM-MD5 and DIGEST-MD5 authentication support for IMAP and SMTP
  - Experimental TLS support for IMAP and SMTP (requires PHP 4.3.x)
  - Override settings with config_local.php
  - Compose form no longer shows attachment options if php file_uploads
  	disabled
  - Improved bodystructure parsing.
  - Support for windows-1257 charset.
  - Optimizations to the number of IMAP calls.
  - Fix problem with IE6 + iso-8859-13.
  - Allow Mail Fetch to use a different POP3 server port number.
  - Force magic_quotes_runtime to be off to avoid problems with this setting.
  - Introduce check_sm_version function for plugins wanting to know
    which version of SquirrelMail this is.
  - Configurable session name to avoid conflicts with other PHP applications.
  - Miscellaneous fixes for systems with error_reporting set to E_ALL.
  - Many many other bugfixes and tweaks!


*************************************
*** SquirrelMail Devel Series 1.3 ***
*************************************


Version 1.3.2
-------------
  - Rewrite of message delivery related functions.
  - User interface modifications.